[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Jahongir <crazyout4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
authx = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
